- New entries: grep update (bsc#932494).

42.1.20151008:
* Start resetting for Leap 42.1.

13.2.20141216:
- Update translations; bnc#907273.

13.2.20141215:
- Update translations.
- Updated entries: BtrFS and Windows (bnc#904268).
- Fix typo (bnc#903998).

13.2.20141103:
- New entries: Modem Authorization After Suspend (bnc#900813).
  Warning: No Location for Bootloader Stage1 Selected (bnc#898023).
  Btrfs and Windows 7 (bnc#900954).
  Unbranded Grub2 on New Installs From Live (bnc#897847).
  Old KDE Wallpaper After Upgrade.
  MATE Desktop official integration,
  Unable to Search Packages in GTK YaST (bnc#901511).
  NET Installation Using Wifi (bnc#899895).
  Slow startup in GNOME (bnc#901013).
  FGLRX Driver for openSUSE 13.2.

13.2.20141030:
- Update translations.
- Remove misleading skype statement (bnc#902977).
- New entry: openSUSE pre-13.2 cifstab Migration (bnc#902947).

13.2.20141013:
* Resolve some 13.1 check-it markers (bnc#900035).

13.2.1
* Use the openSUSE Stylesheets

13.2.0:
* Start resetting for 13.2 and add CHECKIT markers.

13.1.9 (bnc#851083):
* Update translations.
* Avoid "odd characters" in .txt files (bnc#849449).
* Updated entries: AppArmor and Permission Settings (bnc#850058).
* New entries: AutoYaST (bnc#851588).

13.1.8 (bnc#851083):
* Update translations.

13.1.7 (bnc#850258):
* Updated entries: Adobe Reader (acroread) and Other PDF Readers
  (bnc#849112).
* New entries: Booting When in Secure Boot Mode (bnc#850052), AppArmor
  and Permission Settings (bnc#850058), Skype (bnc#850057), UEFI, GPT,
  and MS-DOS Partitions (bnc#850056), Duplicated Network Interfaces
  (bnc#850054), Garbage on the Screen During Installation with the
  Nouveau Driver (bnc#850053), Locate: Replacing findutils-locate by
  mlocate (bnc#847801).
* Update translations.

13.1.6:
* New entries: Adobe Reader (acroread) and Other PDF Readers
  (bnc#849112), KDE and Bluetooth (bnc#848969).
* Update translations.

13.1.5:
* Resolve 12.3 checkit markers (bnc#847802).