@@ -98,6 +98,22 @@ picture was taken by N/A
   </section>
   -->
 
+  <section>
+   <!-- https://bugzilla.suse.com/show_bug.cgi?id=947712 -->
+   <title>Base System Installation</title>
+   <para>
+    If you install a new system as <quote>minimal base system</quote>,
+    the installed system will try to maintain this level and often run
+    into dependency conflicts when you try to install more software.
+   </para>
+   <para>
+    To avoid this, uninstall the package
+    <literal>patterns-openSUSE-minimal_base-conflicts</literal>,
+    instructing the system that you no longer want to maintain a minimal
+    installation (<quote>minimal base system</quote>).
+   </para>
+  </section>
+
   <section id="sec.123.uefi">
    <title>UEFI&mdash;Unified Extensible Firmware Interface</title>
    <para>
