@@ -1,4 +1,5 @@
-- New entries: grep update (bsc#932494).
+- New entries: grep update (bsc#932494); Base System Installation
+  (bsc#947712).
 
 42.1.20151008:
 * Start resetting for Leap 42.1.
